openfgdb4j/native/include/openfgdb_c_api.h

OFGDB_API int ofgdb_create(const char *path, uint64_t *db_handle);
OFGDB_API int ofgdb_close(uint64_t db_handle);
OFGDB_API int ofgdb_exec_sql(uint64_t db_handle, const char *sql);
OFGDB_API int ofgdb_open_table(uint64_t db_handle, const char *table_name, uint64_t *table_handle);
OFGDB_API int ofgdb_close_table(uint64_t db_handle, uint64_t table_handle);
OFGDB_API int ofgdb_search(uint64_t table_handle, const char *fields, const char *where_clause, uint64_t *cursor_handle);
OFGDB_API int ofgdb_fetch_row(uint64_t cursor_handle, uint64_t *row_handle);