openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    /**
     * {@snippet lang=c :
     * int ofgdb_create(const char *path, uint64_t *db_handle)
     * }
     */
    public static int ofgdb_create(MemorySegment path, MemorySegment db_handle) {
        var mh$ = ofgdb_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_create", path, db_handle);
            }
            return (int)mh$.invokeExact(path, db_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_close").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_close"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_close(uint64_t db_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_close$descriptor() {
        return ofgdb_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_close(uint64_t db_handle)
     * }
     */
    public static MethodHandle ofgdb_close$handle() {
        return ofgdb_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_close(uint64_t db_handle)
     * }
     */
    public static MemorySegment ofgdb_close$address() {
        return ofgdb_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_close(uint64_t db_handle)
     * }
     */
    public static int ofgdb_close(long db_handle) {
        var mh$ = ofgdb_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_close", db_handle);
            }
            return (int)mh$.invokeExact(db_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_exec_sql {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_exec_sql").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_exec_sql"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_exec_sql(uint64_t db_handle, const char *sql)
     * }
     */
    public static FunctionDescriptor ofgdb_exec_sql$descriptor() {
        return ofgdb_exec_sql.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_exec_sql(uint64_t db_handle, const char *sql)
     * }
     */
    public static MethodHandle ofgdb_exec_sql$handle() {
        return ofgdb_exec_sql.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_exec_sql(uint64_t db_handle, const char *sql)
     * }
     */
    public static MemorySegment ofgdb_exec_sql$address() {
        return ofgdb_exec_sql.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_exec_sql(uint64_t db_handle, const char *sql)
     * }
     */
    public static int ofgdb_exec_sql(long db_handle, MemorySegment sql) {
        var mh$ = ofgdb_exec_sql.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_exec_sql", db_handle, sql);
            }
            return (int)mh$.invokeExact(db_handle, sql);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_open_table {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_open_table").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_open_table"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_open_table(uint64_t db_handle, const char *table_name, uint64_t *table_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_open_table$descriptor() {
        return ofgdb_open_table.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_open_table(uint64_t db_handle, const char *table_name, uint64_t *table_handle)
     * }
     */
    public static MethodHandle ofgdb_open_table$handle() {
        return ofgdb_open_table.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_open_table(uint64_t db_handle, const char *table_name, uint64_t *table_handle)
     * }
     */
    public static MemorySegment ofgdb_open_table$address() {
        return ofgdb_open_table.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_open_table(uint64_t db_handle, const char *table_name, uint64_t *table_handle)
     * }
     */
    public static int ofgdb_open_table(long db_handle, MemorySegment table_name, MemorySegment table_handle) {
        var mh$ = ofgdb_open_table.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_open_table", db_handle, table_name, table_handle);
            }
            return (int)mh$.invokeExact(db_handle, table_name, table_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_close_table {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_close_table").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_close_table"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_close_table(uint64_t db_handle, uint64_t table_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_close_table$descriptor() {
        return ofgdb_close_table.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_close_table(uint64_t db_handle, uint64_t table_handle)
     * }
     */
    public static MethodHandle ofgdb_close_table$handle() {
        return ofgdb_close_table.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_close_table(uint64_t db_handle, uint64_t table_handle)
     * }
     */
    public static MemorySegment ofgdb_close_table$address() {
        return ofgdb_close_table.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_close_table(uint64_t db_handle, uint64_t table_handle)
     * }
     */
    public static int ofgdb_close_table(long db_handle, long table_handle) {
        var mh$ = ofgdb_close_table.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_close_table", db_handle, table_handle);
            }
            return (int)mh$.invokeExact(db_handle, table_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_search {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_search").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_search"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_search(uint64_t table_handle, const char *fields, const char *where_clause, uint64_t *cursor_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_search$descriptor() {
        return ofgdb_search.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_search(uint64_t table_handle, const char *fields, const char *where_clause, uint64_t *cursor_handle)
     * }
     */
    public static MethodHandle ofgdb_search$handle() {
        return ofgdb_search.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_search(uint64_t table_handle, const char *fields, const char *where_clause, uint64_t *cursor_handle)
     * }
     */
    public static MemorySegment ofgdb_search$address() {
        return ofgdb_search.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_search(uint64_t table_handle, const char *fields, const char *where_clause, uint64_t *cursor_handle)
     * }
     */
    public static int ofgdb_search(long table_handle, MemorySegment fields, MemorySegment where_clause, MemorySegment cursor_handle) {
        var mh$ = ofgdb_search.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_search", table_handle, fields, where_clause, cursor_handle);
            }
            return (int)mh$.invokeExact(table_handle, fields, where_clause, cursor_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_fetch_row {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_fetch_row").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_fetch_row"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_fetch_row(uint64_t cursor_handle, uint64_t *row_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_fetch_row$descriptor() {
        return ofgdb_fetch_row.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_fetch_row(uint64_t cursor_handle, uint64_t *row_handle)
     * }
     */
    public static MethodHandle ofgdb_fetch_row$handle() {
        return ofgdb_fetch_row.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_fetch_row(uint64_t cursor_handle, uint64_t *row_handle)
     * }
     */
    public static MemorySegment ofgdb_fetch_row$address() {
        return ofgdb_fetch_row.ADDR;
    }
